--- a/app/src/main/res/drawable/tab_background.xml
+++ b/app/src/main/res/drawable/tab_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/tab_gameset_background_selected" android:state_selected="true" />
-    <item android:drawable="@drawable/tab_gameset_background_unselected" android:state_selected="false" android:state_focused="false" android:state_pressed="false" />
+    <item android:drawable="@color/white" android:state_selected="true" />
+    <item android:drawable="@color/main_bg" android:state_selected="false" android:state_focused="false" android:state_pressed="false" />
 </selector>
