--- a/app/src/main/res/layout/layout_seat.xml
+++ b/app/src/main/res/layout/layout_seat.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:orientation="vertical"
-    >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_user_name"
         android:layout_width="match_parent"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:singleLine="true"
         android:text="马大哈"
         android:textSize="8dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:singleLine="true"/>
+        android:textColor="@color/white"/>
 
     <ImageView
         android:id="@+id/iv_user_head"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tv_user_name"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/tv_goldcoin"
         android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:id="@+id/tv_goldcoin"
-            android:layout_width="40dp"
-            android:layout_height="15dp"
-            android:text="123"
-            android:gravity="center"
-            android:textSize="8dp"
-            android:background="@drawable/bg001"
-            android:layout_gravity="center_horizontal"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg001"
+        android:gravity="center"
+        android:text="123"
+        android:textSize="8dp"
+        android:textColor="@color/white"/>
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
