--- a/app/src/main/res/layout/popupwindow_buy_score.xml
+++ b/app/src/main/res/layout/popupwindow_buy_score.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rsv="http://schemas.android.com/apk/res-auto"
-    android:layout_width="600px"
-    android:layout_height="620px"
-
-    android:paddingLeft="50px"
-    android:paddingRight="50px"
-    android:paddingTop="10px"
-    android:paddingBottom="10px"
-    android:background="#152323"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:background="@color/main_bg"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30px"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_buy_coin"
-            android:layout_width="120px"
-            android:layout_height="40px"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
             android:text="购买金币"
-            android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textColor="@color/login_button_normal"
+            android:textSize="10dp"
+            android:gravity="center"
             android:background="@drawable/game_bj"/>
         <TextView
             android:layout_width="wrap_content"
@@ -32,21 +30,20 @@
             android:layout_weight="1" />
         <ImageView
             android:id="@+id/iv_close"
-            android:layout_width="40px"
-            android:layout_height="40px"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/close"
            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="370px"
-        android:layout_marginTop="30px"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/game_bj"
+        android:background="@color/actionbar_pres_color"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80px">
+            android:layout_height="30dp">
         <TextView
             android:id="@+id/tv_message"
             android:layout_width="match_parent"
@@ -54,7 +51,7 @@
             android:text=""
             android:textSize="12dp"
             android:gravity="center"
-            android:textColor="@color/red"
+            android:textColor="@color/white"
             android:visibility="invisible"/>
 
         </LinearLayout>
@@ -62,41 +59,44 @@
         <LinearLayout
 
             android:layout_width="wrap_content"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
 
             >
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
+                android:layout_height="wrap_content"
                 android:text="带入记分牌："
                 android:gravity="center"
+                android:textSize="10dp"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
             <ImageView
-                android:layout_marginLeft="10px"
-                android:layout_width="50px"
-                android:layout_height="50px"
+                android:layout_marginLeft="5dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/insure_pot_pull"/>
             <TextView
                 android:id="@+id/tv_core"
-                android:layout_marginLeft="20px"
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
+                android:layout_height="wrap_content"
                 android:text="500"
+                android:textStyle="bold"
                 android:textColor="#ad7b43"
                 android:textSize="24dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <com.yijian.dzpoker.view.RangeSliderBar2
-            android:layout_centerInParent="true"
             android:id="@+id/seekbar_core"
             android:layout_width="match_parent"
-            android:layout_height="90px"
+            android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
             rsv:filledColor="#3c78d8"
-            rsv:emptyColor="#ffffff"
+            rsv:emptyColor="@color/white"
             rsv:rangeCount="7"
             rsv:cursorDrawable="@drawable/circular_ico"
             />
@@ -104,41 +104,46 @@
         <LinearLayout
 
             android:layout_width="wrap_content"
-            android:layout_height="60px"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
+                android:layout_height="wrap_content"
                 android:text="个人财富："
                 android:textSize="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
             <TextView
                 android:id="@+id/tv_coin"
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
-                android:layout_marginLeft="5px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
                 android:text="350"
                 android:textSize="10dp"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:layout_gravity="center_vertical"/>
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
-                android:layout_marginLeft="20px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="服务费："
                 android:textSize="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
             <TextView
                 android:id="@+id/tv_service_coin"
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
-                android:layout_marginLeft="5px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
                 android:text="20"
                 android:textSize="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
 
 
@@ -146,24 +151,26 @@
         <LinearLayout
 
             android:layout_width="wrap_content"
-            android:layout_height="60px"
+            android:layout_height="30dp"
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
+                android:layout_height="wrap_content"
                 android:text="已经带入/总带入："
                 android:textSize="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
             <TextView
                 android:id="@+id/tv_in_coin"
                 android:layout_width="wrap_content"
-                android:layout_height="60px"
-                android:layout_marginLeft="20px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:text="0/无上限"
                 android:textSize="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
     </LinearLayout>
@@ -171,29 +178,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/button_apply"
-            android:layout_marginTop="20px"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="160px"
-            android:layout_height="50px"
-            android:text="购买金币"
-            android:textColor="@color/black"
-            android:background="@drawable/buy_score_bj"/>
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_red"
+            android:text="确定"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10px"
+            android:layout_marginTop="2dp"
             android:textSize="8dp"
+            android:textColor="@color/white"
             android:text="在下一局开始前，为您补充所购记分牌"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5px"
+            android:textColor="@color/white"
             android:textSize="8dp"
             android:text="牌局结束后，会自动将记分牌兑换成您的财富"/>
     </LinearLayout>
